add template logic

--- a/drone/template.html
+++ b/drone/template.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
- <title>Drone Page</title>
+ <title>CVC Drone Page</title>
 </head>
 
 <body>
+  {{.}}
 Website to control drones.....
 </body>
 
